clean after merge